libminijail.h


enum {
	MINIJAIL_ERR_NO_ACCESS = 126,
	MINIJAIL_ERR_NO_COMMAND = 127,
	MINIJAIL_ERR_SIG_BASE = 128,
	MINIJAIL_ERR_MOUNT = 251,
	MINIJAIL_ERR_PRELOAD = 252,
	MINIJAIL_ERR_SECCOMP_VIOLATION = 253,
	MINIJAIL_ERR_JAIL = 253,
	MINIJAIL_ERR_INIT = 254,
};
struct minijail;
struct sock_fprog;
typedef int (*minijail_hook_t)(void *context);
typedef enum {
	MINIJAIL_HOOK_EVENT_PRE_DROP_CAPS,
	MINIJAIL_HOOK_EVENT_PRE_EXECVE,
	MINIJAIL_HOOK_EVENT_PRE_CHROOT,
	MINIJAIL_HOOK_EVENT_MAX,
} minijail_hook_event_t;
struct minijail *minijail_new(void);
void minijail_change_uid(struct minijail *j, uid_t uid)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_change_gid(struct minijail *j, gid_t gid)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_set_supplementary_gids(struct minijail *j, size_t size,
				     const gid_t *list)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_keep_supplementary_gids(struct minijail *j)
    MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_change_user(struct minijail *j, const char *user)
    MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_change_group(struct minijail *j, const char *group)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_use_seccomp(struct minijail *j) MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_no_new_privs(struct minijail *j) MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_use_seccomp_filter(struct minijail *j)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_set_seccomp_filter_tsync(struct minijail *j)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_set_seccomp_filters(struct minijail *j,
				  const struct sock_fprog *filter)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_parse_seccomp_filters(struct minijail *j, const char *path)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_parse_seccomp_filters_from_fd(struct minijail *j, int fd)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_log_seccomp_filter_failures(struct minijail *j)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_use_caps(struct minijail *j, uint64_t capmask)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_capbset_drop(struct minijail *j, uint64_t capmask)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_set_ambient_caps(struct minijail *j) MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_reset_signal_mask(struct minijail *j)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_reset_signal_handlers(struct minijail *j)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_namespace_vfs(struct minijail *j) MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_namespace_enter_vfs(struct minijail *j, const char *ns_path)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_new_session_keyring(struct minijail *j)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_skip_setting_securebits(struct minijail *j,
				      uint64_t securebits_skip_mask)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_skip_remount_private(struct minijail *j)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_remount_mode(struct minijail *j, unsigned long mode)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_namespace_ipc(struct minijail *j) MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_namespace_uts(struct minijail *j) MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_namespace_set_hostname(struct minijail *j, const char *name)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_namespace_net(struct minijail *j) MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_namespace_enter_net(struct minijail *j, const char *ns_path)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_namespace_cgroups(struct minijail *j)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_close_open_fds(struct minijail *j) MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_namespace_pids(struct minijail *j) MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_namespace_pids_rw_proc(struct minijail *j)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_namespace_user(struct minijail *j) MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_namespace_user_disable_setgroups(struct minijail *j)
    MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_uidmap(struct minijail *j, const char *uidmap)
    MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_gidmap(struct minijail *j, const char *gidmap)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_remount_proc_readonly(struct minijail *j)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_run_as_init(struct minijail *j) MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_write_pid_file(struct minijail *j, const char *path)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_inherit_usergroups(struct minijail *j)
    MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_use_alt_syscall(struct minijail *j, const char *table)
    MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_rlimit(struct minijail *j, int type, rlim_t cur, rlim_t max)
    MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_add_to_cgroup(struct minijail *j, const char *path)
    MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_forward_signals(struct minijail *j) MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_create_session(struct minijail *j) MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_enter_chroot(struct minijail *j, const char *dir)
    MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_enter_pivot_root(struct minijail *j, const char *dir)
    MINIJAIL_ATTRIBUTE_NONNULL();
char *minijail_get_original_path(struct minijail *j, const char *chroot_path)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_mount_tmp(struct minijail *j) MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_mount_tmp_size(struct minijail *j, size_t size)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_mount_dev(struct minijail *j) MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_mount_with_data(struct minijail *j, const char *src,
			     const char *dest, const char *type,
			     unsigned long flags, const char *data)
    MINIJAIL_ATTRIBUTE_NONNULL((1, 2, 3, 4));
int minijail_mount(struct minijail *j, const char *src, const char *dest,
		   const char *type, unsigned long flags)
    MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_bind(struct minijail *j, const char *src, const char *dest,
		  int writeable) MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_add_hook(struct minijail *j, minijail_hook_t hook, void *payload,
		      minijail_hook_event_t event)
    MINIJAIL_ATTRIBUTE_NONNULL((1, 2));
int minijail_preserve_fd(struct minijail *j, int parent_fd, int child_fd)
    MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_set_preload_path(struct minijail *j, const char *preload_path)
    MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_enter(const struct minijail *j) MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_run(struct minijail *j, const char *filename, char *const argv[])
    MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_run_no_preload(struct minijail *j, const char *filename,
			    char *const argv[]) MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_run_pid(struct minijail *j, const char *filename,
		     char *const argv[], pid_t *pchild_pid)
    MINIJAIL_ATTRIBUTE_NONNULL((1, 2, 3));
int minijail_run_pipe(struct minijail *j, const char *filename,
		      char *const argv[], int *pstdin_fd)
    MINIJAIL_ATTRIBUTE_NONNULL((1, 2, 3));
int minijail_run_pid_pipes(struct minijail *j, const char *filename,
			   char *const argv[], pid_t *pchild_pid,
			   int *pstdin_fd, int *pstdout_fd, int *pstderr_fd)
    MINIJAIL_ATTRIBUTE_NONNULL((1, 2, 3));
int minijail_run_pid_pipes_no_preload(struct minijail *j, const char *filename,
				      char *const argv[], pid_t *pchild_pid,
				      int *pstdin_fd, int *pstdout_fd,
				      int *pstderr_fd)
    MINIJAIL_ATTRIBUTE_NONNULL((1, 2, 3));
int minijail_run_env_pid_pipes_no_preload(
    struct minijail *j, const char *filename, char *const argv[],
    char *const envp[], pid_t *pchild_pid, int *pstdin_fd, int *pstdout_fd,
    int *pstderr_fd) MINIJAIL_ATTRIBUTE_NONNULL((1, 2, 3));
pid_t minijail_fork(struct minijail *j) MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_kill(struct minijail *j) MINIJAIL_ATTRIBUTE_NONNULL();
int minijail_wait(struct minijail *j) MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_destroy(struct minijail *j) MINIJAIL_ATTRIBUTE_NONNULL();
void minijail_log_to_fd(int fd, int min_priority);